versions/v4.1.0/build/dts/api/bindings/mtd/atmel,sam-flash.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/build/dts/api/bindings/mtd/atmel,sam-flash.html
original_path: build/dts/api/bindings/mtd/atmel,sam-flash.html
---

# atmel,sam-flash

Vendor: [Atmel Corporation](../../bindings.md#dt-vendor-atmel)

## Description

```text
This binding describes the Atmel SAM flash area layout.

The Atmel SAM flash area varies in write-block-size, memory area,
and the layout of erase-blocks.

E.g. the flash area layout of the ATSAM4E16C:

  |--------------------|
  | 8 Kbytes           |  erase block size = 2048
  |--------------------|
  | 8 Kbytes           |  erase block size = 2048
  |--------------------|
  | 48 Kbytes          |  erase block size = 4096
  |--------------------|
  | 64 Kbytes          |  erase block size = 4096
  |--------------------|
  | ...                |

The ATSAM4E16C has a flash area which is 1000Kbytes
(1024 * 1024 bytes) with a write-block-size of 8 bytes. The first
16 Kbytes can be erased in blocks of 2048 bytes
(8 blocks of 2048 bytes), the remaining flash area is erasable
in blocks of 4096 bytes (252 blocks of 4096 bytes).

This flash area layout would described as:

  / {
    soc {
      eefc: flash-controller@400e0a00 {
      compatible = "atmel,sam-flash-controller";
      reg = <0x400e0a00 0x200>;
      clocks = <&pmc PMC_TYPE_PERIPHERAL 6>;
      status = "okay";

      #address-cells = <1>;
      #size-cells = <1>;
      #erase-block-cells = <2>;

      flash0: flash@400000 {
        compatible = "atmel,sam-flash", "soc-nv-flash";
        reg = <0x400000 0x100000>;
        write-block-size = <8>;
        erase-block-size = <4096>;
        erase-blocks = <&eefc 8 2048>, <&eefc 252 4096>;
      };
    };
  };

Notes:
  The flash area layout node flash0 should have both this
  compatible, "atmel,sam-flash", and the "soc-nv-flash"
  compatible. The latter is used from mcuboot and other
  modules to identify the flash area.

  If partitions are used, remember that their addresses are
  offsets relative to the flash area address.  E.g. using
  mcuboot and a allocating a storage partition:

    &flash0 {
      partitions {
        compatible = "fixed-partitions";
        #address-cells = <1>;
        #size-cells = <1>;

        boot_partition: partition@0 {
          label = "mcuboot";
          reg = <0x0 0x10000>;
        };

        slot0_partition: partition@10000 {
          label = "slot0";
          reg = <0x10000 0x70000>;
        };

        slot1_partition: partition@80000 {
          label = "slot1";
          reg = <0x80000 0x70000>;
        };

        storage_partition: partition@f0000 {
          label = "storage";
          reg = <0xf0000 0x100000>;
        };
      };
    };
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `write-block-size` | `int` | ```text The flash controller is limited by hardware to writing blocks of this size, aligned to this size, in bytes, to previously erased flash, within the flash memory area. ``` |
| `erase-block-size` | `int` | ```text The flash controller is limited by hardware to erase whole blocks of flash at a time. This property describes the largest erase block size in erase-blocks. ``` |
| `erase-blocks` | `phandle-array` | ```text The flash controller is limited by hardware to erase whole blocks of flash at a time. This property describes the layout of the erase-blocks, which can vary in size within the flash memory area. ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “atmel,sam-flash” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text Indicates the operational status of the hardware or other resource that the node represents. In particular:    - "okay" means the resource is operational and, for example,     can be used by device drivers   - "disabled" means the resource is not operational and the system     should treat it as if it is not present  For details, see "2.3.4 status" in Devicetree Specification v0.4. ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text This property is a list of strings that essentially define what type of hardware or other resource this devicetree node represents. Each device driver checks for specific compatible property values to find the devicetree nodes that represent resources that the driver should manage.  The recommended format is "vendor,device", The "vendor" part is an abbreviated name of the vendor. The "device" is usually from the datasheet.  The compatible property can have multiple values, ordered from most- to least-specific. Having additional values is useful when the device is a specific instance of a more general family, to allow the system to match the most specific driver available.  For details, see "2.3.1 compatible" in Devicetree Specification v0.4. ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text Information used to address the device. The value is specific to the device (i.e. is different depending on the compatible property).  The "reg" property is typically a sequence of (address, length) pairs. Each pair is called a "register block". Values are conventionally written in hex.  For details, see "2.3.6 reg" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text Optional names given to each register block in the "reg" property. For example:    / {        soc {            #address-cells = <1>;            #size-cells = <1>;             uart@1000 {                reg = <0x1000 0x2000>, <0x3000 0x4000>;                reg-names = "foo", "bar";            };        };   };  The uart@1000 node has two register blocks:    - one with base address 0x1000, size 0x2000, and name "foo"   - another with base address 0x3000, size 0x4000, and name "bar" ``` |
| `interrupts` | `array` | ```text Information about interrupts generated by the device, encoded as an array of one or more interrupt specifiers. The format of the data in this property varies by where the device appears in the interrupt tree. Devices with the same "interrupt-parent" will use the same format in their interrupts properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text Extended interrupt specifier for device, used as an alternative to the "interrupts" property.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-names` | `string-array` | ```text Optional names given to each interrupt generated by a device. The interrupts themselves are defined in either "interrupts" or "interrupts-extended" properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-parent` | `phandle` | ```text If present, this refers to the node which handles interrupts generated by this device.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `label` | `string` | ```text Human readable string describing the device. Use of this property is deprecated except as needed on a case-by-case basis.  For details, see "4.1.2 Miscellaneous Properties" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Information about the device's clock providers. In general, this property should follow conventions established in the dt-schema binding:    https://github.com/devicetree-org/dt-schema/blob/main/dtschema/schemas/clock/clock.yaml ``` |
| `clock-names` | `string-array` | ```text Optional names given to each clock provider in the "clocks" property. ``` |
| `#address-cells` | `int` | ```text This property encodes the number of <u32> cells used by address fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `#size-cells` | `int` | ```text This property encodes the number of <u32> cells used by size fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `dmas` | `phandle-array` | ```text DMA channel specifiers relevant to the device. ``` |
| `dma-names` | `string-array` | ```text Optional names given to the DMA channel specifiers in the "dmas" property. ``` |
| `io-channels` | `phandle-array` | ```text IO channel specifiers relevant to the device. ``` |
| `io-channel-names` | `string-array` | ```text Optional names given to the IO channel specifiers in the "io-channels" property. ``` |
| `mboxes` | `phandle-array` | ```text Mailbox / IPM channel specifiers relevant to the device. ``` |
| `mbox-names` | `string-array` | ```text Optional names given to the mbox specifiers in the "mboxes" property. ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers relevant to the device. ``` |
| `power-domain-names` | `string-array` | ```text Optional names given to the power domain specifiers in the "power-domains" property. ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
